# demo_exam

./: docker-compose.yml  dump.sql  flake.nix
interface/: Cargo.toml  data.sqlite
interface/.cargo/: config.toml
interface/.sqlx/: query-33de585f492d980dd6fc2420352233a03fdc6ed226fdb338a31601f906805454.json  query-4c75abdcf100788aa39a2bee2ac341a218418dd23b8789c3f814c1ebb7de24c0.json  query-53ef6bcee6b718bb74f5213a483d5664fd7843dc94f67262124ef8e91a0f844d.json  query-668accb2ce9e7776f0f19449e42ac52f98ea10c061418ccafacf5211c39a0f0a.json  query-6be20bbfd3eae8321faf684554050939d623a5b0201d7be2c7b6d73e2a9d85bf.json  query-7d9edaba3dab2a8b5420354abb61f4cc5f38b86017a6dce0156f0080fff1dcf9.json  query-a491111332d61213801134201435a6248c93a3aac12f1402cfb88505beae016a.json  query-b510f3ad1a44de7b337a42451a68a78a0f7553471920134f208d43c061ff6f3a.json  query-d1d090d7e6c0762c78d33026b18a71af58fa2cb0bdd63a204414a67e10f3a7bb.json  query-d2d8ea84aaf6eb58928d2de8be6a28f381f4bf189d1b53642d68eb37e35c35dc.json  query-d9a5e36d8ac9dadf530814e5d1128c4c020ddd1923f35bb0455e42d0cdc9400f.json  query-e79acb0ef57eb1916c5f9fb09343069631e2e442accf5a9a2fa2c61814f82276.json  query-ef3e2ff04729ea5b2362d84620ef6280b517a60229afdc38e4ed5c7ca2f72fd1.json
interface/src/: main.rs  partners.rs  views.rs
interface/src/models/: mod.rs  partners.rs  product_types.rs  products.rs  sales.rs
