[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders", "chrono", "datepicker"] }
futures = "0.3.31"
image = { version = "=0.25.0", features = ["png"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std", "sqlite", "time", "uuid"] }
time = "0.3.36"
uuid = { version = "1.11.0", features = ["v4"] }
